--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyBank_Intents">
-        <activity android:name=".Absa"></activity>
+        <activity android:name=".Stanbic"></activity>
+        <activity android:name=".Absa" />
         <activity android:name=".Kcb" />
         <activity android:name=".Family" />
         <activity android:name=".Equity" />
